fixes select box overflows

--- a/oc-admin/themes/default/less/ui-elements.less
+++ b/oc-admin/themes/default/less/ui-elements.less
@@ -175,7 +175,7 @@ a.btn-orange:hover{
 
     font-size: 13px;
     color:@color-gray-black;
-    overflow: visible;
+    overflow: hidden;
     display: block;
 
     background-image: linear-gradient(bottom, rgb(237,237,237) 0%, rgb(255,255,255) 100%);
